# AISD

ArrayList/: ArrayList.h  CMakeLists.txt  a.out  main.cpp
BItset/: CMakeLists.txt  bitset.hpp  bitset.tpp  bitset_kruk.cpp  main.cpp
Hash/: CMakeLists.txt  PointerList.h  hash.hpp  hash.tpp  main.cpp
PointerList/: CMakeLists.txt  main.cpp
Queue/: CMakeLists.txt  PointerList.h  Queue.h  main.cpp
Set/: CMakeLists.txt  Makefile  main.cpp  set.hpp  set.tpp  set_kruk.cpp  set_tests
Stack/: CMakeLists.txt  PointerList.h  Stack.h  main.cpp
sort/: CMakeLists.txt  Makefile  a.out  odchylenie  odchylenie.cpp  sort.h  wykres  wykres.cpp
tree/: CMakeLists.txt  Tree.hpp  Tree.tpp  main.cpp
tree/src/: Stack.h
